Fix pagination to avoid overlap with footer

--- a/Front-end/src/HomePage/HomePage.module.css
+++ b/Front-end/src/HomePage/HomePage.module.css
@@ -115,6 +115,7 @@
   display: flex;
   justify-content: center;
   margin: 20px 0;
+  margin-bottom: 40px;
 }
 
 .pagebutton {
